src/app/gallery/fullscreen/fullscreen.component.scss
@import 'src/styles/variables.scss';

:host {
  backdrop-filter: blur(5px);
  background-color: rgba(0, 0, 0, 0.5);
  transition: $transition-duration;
  overflow: hidden;

  .fullscreen-container {
    width: 100%;
    height: 100%;
    display: flex;
  }

  .non-group-container {
    overflow: auto;

    .image-container {
      padding: $gap 0;
    }
  }

  .group-container {
    display: flex;
    flex-direction: column;
    overflow: auto;
    gap: $gap;
    padding: $gap 0;

    .group-images-container {
      height: auto;
    }

    .group-image-container {
      display: flex;
      flex-direction: row;
      
      overflow-y: hidden;
      padding: 0;
      gap: $gap;

      @media screen and (min-width:768px) {
        justify-content: center;
      }

      img {
        opacity: 0;
        cursor: pointer;
      }
    }
  }

  .image-container {
    display: flex;
    justify-content: center;
    overflow: auto;
    box-sizing: border-box;

    img {
      height: 100%;
      overflow: auto;
      object-fit: contain;
    }
  }

  img {
    outline: none;
    user-select: none;

    transition-property: opacity;
    transition-duration: $transition-duration;

    opacity: 0;
  }

  .sidebar-left,
  .sidebar-right {
    width: 42px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: $gap;

    .sidebar-start,
    .sidebar-center,
    .sidebar-end {
      display: flex;
      flex-direction: column;
    }
  }

  .sidebar-right {
    align-items: flex-end;

    .sidebar-start,
    .sidebar-center,
    .sidebar-end {
      align-items: flex-end;
    }
  }

  .resolution-info {
    align-content: center;
    padding-top: $gap;
    text-shadow: -1px 0 var(--color-text-shadow), 0 1px var(--color-text-shadow), 1px 0 var(--color-text-shadow), 0 -1px var(--color-text-shadow);

    >span {
      white-space: nowrap;
    }
  }

}

